--- a/src/scss/custom/base/_variables.scss
+++ b/src/scss/custom/base/_variables.scss
@@ -1,10 +1,10 @@
 // Wlasne zmienne - kolory
-$fp-accent-color: #BE8C6B;
+$fp-accent-color:#444444;
 $fp-gray-100: #F8F8F8;
 $fp-gray-200: #EEEEEE;
 $fp-gray-600: #B7B7B7;
 $fp-gray-800: #707070;
-$fp-gray-900: #444444;
+$fp-gray-900: #BE8C6B;
 $fp-white: #FFFFFF;
 $fp-black: #000000;
 $fp-input-bg: #FCFCFC;
