--- a/src/scss/custom/components/_footer.scss
+++ b/src/scss/custom/components/_footer.scss
@@ -21,5 +21,27 @@
 .fp-footer-p {
     line-height: 2;
 
+}
+.sk-footer-contact-list {
+    margin-bottom: .75rem;
 
+}
+.sk-footer-contact-item {
+    padding: .2rem 0;
+}
+
+.fp-social-box {
+    @include fp-size(26px, 26px);
+
+}
+
+.fp-newsletter-form-controll {
+
+    height: 1.55rem;
+    font-size: .75rem;
+
+}
+.fp-newsletter-btn {
+    padding: .25rem 1rem;
+    font-size: .625rem;
 }
