--- a/src/scss/custom/components/_footer.scss
+++ b/src/scss/custom/components/_footer.scss
@@ -45,3 +45,15 @@
     padding: .25rem 1rem;
     font-size: .625rem;
 }
+
+// sekcja copyright
+
+.fp-copy {
+    padding: 1rem 0;
+    font-size: .625rem;
+}
+.fp-copy-second {
+   margin-top: .25rem;
+   font-size: 0.5625rem;
+}
+
