--- a/src/scss/custom/components/_components.scss
+++ b/src/scss/custom/components/_components.scss
@@ -1,3 +1,6 @@
 @import 'header';
 @import 'hero-unit';
 @import 'footer';
+@import 'page-intro';
+@import 'helpers.scss';
+@import 'services-group.scss';
