--- a/src/scss/custom/base/_variables.scss
+++ b/src/scss/custom/base/_variables.scss
@@ -13,8 +13,8 @@ $fp-contact-form-shadow: #292C31;
 $fp-product-search-btn-color: #CCCCCC;
 
 // wlasne zmienne - tekst
-$fp-font-family-body: 'Lato';
-$fp-font-family-secondery: 'Oswald';
+$fp-font-family-body: "Lato";
+$fp-font-family-secondery: "Oswald";
 // Kolory bootstrap 4 
 $theme-colors: (
     "primary": $fp-accent-color
