--- a/src/scss/custom/components/_components.scss
+++ b/src/scss/custom/components/_components.scss
@@ -3,4 +3,5 @@
 @import 'footer';
 @import 'page-intro';
 @import 'helpers.scss';
-@import 'services-group.scss';
+@import 'services-group';
+@import 'portfolio';
