--- a/src/scss/custom/components/_page-intro.scss
+++ b/src/scss/custom/components/_page-intro.scss
@@ -2,7 +2,7 @@
     line-height: 1;
 
 }
-fp-page-intro-subheader {
+.fp-page-intro-subheader {
     margin-top: 0;
     letter-spacing: .1rem;
     line-height: 1.2;
@@ -10,5 +10,10 @@ fp-page-intro-subheader {
 
 .fp-page-intro-rule {
     margin: 1.25rem 0;
+    
 
+}
+
+.fp-front-page-welcome {
+    padding: 60px 0 70px; 
 }
